[metadata]
name = pepbrowser
version = attr: pepbrowser.__version__
description = View Python Enhancement Proposals right inside your terminal
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wasi-master/pepbrowser
author = Wasi Master
author_email = arianmollik323@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Terminals
keywords =
    peps
    pep
    python enhancement proposals
    pepbrowser
    pep viewer
    pepviewer
project_urls =
    Bug Tracker = https://github.com/wasi-master/pepbrowser/issues
    Source = https://github.com/wasi-master/pepbrowser
    Documentation = https://wasi-master.github.io/pepbrowser
    Say Thanks = https://saythanks.io/to/wasi-master

[options]
packages =
    pepbrowser
install_requires =
    rich-rst
    requests
python_requires = >=3.6
zip_safe = False

[options.entry_points]
console_scripts =
    pepbrowser=pepbrowser.__main__:main
pipx.run =
    pepbrowser=pepbrowser.__main__:main
